style.css
/* Copyright 2024 Jay Lang
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

/* STYLING */

/* Fonts: everything uses Roboto */
body {
    font-family: 'Roboto', Verdana, sans-serif;
}

/* Header and footer are dark, and use a white text color to compensate */
.blue-background {
    background-color: #1F2937;
    color: #E5E7EB;
    font-size: 18px;
}

.header-logo-text {
    font-size: 24px;
    font-weight: bold;
    color: #F9FAF8;
}

/* Button! */
.button {
    display: inline-block;
    padding: 8px 24px;
    border-radius: 5px;

    background-color: #3882F6;
    color: #E5E7EB;
    text-decoration: none;
    font-weight: bold;
}

/* LAYOUT */

/* Control whether things have margin or not. Default no. */
* {
    margin: 0px;
}

/* Forcefully put it back if you need it */
.with-margin {
    margin: 8px 24px;
}

.extra-margin-below {
    margin-bottom: 36px;
}

.blue-background {
    padding: 8px 24px;
}

/* Lists don't have any left bullet or padding to them, since 
 * we primarily use these in FlexBoxes.
 */
ul {
    list-style-type: none;
    padding: 0px;
}

/* Welcome area. It's got two flex boxes to the sides which try and
 * take up any extra space on wide screens
 */
.welcome-container {
    display: flex;
    justify-content: center;
}

/* Any additional space on the outside of the welcome is distributed
 * evenly to padding <div>s
 */
.padding {
    flex: auto;
}

/* Header area. Flex layout with space in the middle */
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
}

/* Banner! First decide an ideal size for the glamour shot */
.banner img {
    max-width: 400px;
    max-height: 300px;
    width: 100%;
    height: auto;
}

/* Banner content should be allowed to wrap
 * i.e., the image should be allowed to sit below the text on small screens
 */
.banner {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

/* The hero text should not get too wide. */
.hero {
    max-width: 500px;
}

